stylesheets/main.css
@font-face{
  font-family:'Lato Thin';
  font-style:normal;
  font-weight:200;
  src:local('Lato Thin'),
    url(http://brick.a.ssl.fastly.net/fonts/lato/200.woff) format('woff')
}

@font-face{
  font-family:'Lato';
  font-style:normal;
  font-weight:300;
  src:local('Lato'),
    url(http://brick.a.ssl.fastly.net/fonts/lato/300.woff) format('woff')
}

@font-face{
  font-family:'Raleway';
  font-style:normal;
  font-weight:400;
  src:local('Raleway Regular'),
    url(http://brick.a.ssl.fastly.net/fonts/raleway/400.woff) format('woff')
}

@font-face{
  font-family:'Raleway Bold';
  font-style:normal;
  font-weight:700;
  src:local('Raleway Regular'),
    url(http://brick.a.ssl.fastly.net/fonts/raleway/400.woff) format('woff')
}

body {
  font-family: 'Lato', sans-serif;
  font-size: 14pt;
  color: rgba(220, 220, 220, 1);
  margin: 0;
  background-color: rgba(10,25,40,1);
  /*background-image: url(.);*/
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  background-size: cover;
}

h3 {
  color: rgba(220, 220, 220, 1);
  margin-bottom: 1em;
  font-size: 22pt;
}

.display {
  display: table;
  width: 100%;
  height: 100vh;
}

.bannerText {
  display: table-cell;
  vertical-align: middle;
  color: rgba(255,255,255,1.0);
  opacity: 0;

  transition-duration: 0.5s;
  transition-delay: 0.2s;
  -moz-transition-duration: 0.5s;
  -moz-transition-delay: 0.2s;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-delay: 0.2s;
}

#FORTYNINE {
  font-family: 'Lato Thin';
}

#MAPS {
  font-family: 'Raleway Bold';
  font-weight: 700;
}

#topname {
  font-size: 60pt;
  text-align: center;
}

.slogan {
  font-family: 'Raleway', sans-serif;
  font-style: italic;
  margin-bottom: 1em;
  font-size: 16pt;
  text-align: center;
  padding-left: 0.2em;
}

.section {
  width: 100%;
}

.container {
  width: 95%;
  margin-left: auto;
  margin-right: auto;
}

.main {
  background-color: rgba(0, 0, 0, 0.2);

  transition-duration: 0.5s;
  transition-delay: 0.2s;
  -moz-transition-duration: 0.5s;
  -moz-transition-delay: 0.2s;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-delay: 0.2s;
}

.copy {
  padding-bottom: 2em;
}

.social {
  text-align: center;
}

.footer {
  background-color: rgba(0, 0, 0, 0.0);
  font-size: 16pt;
  padding-top: 10px;
  padding-bottom: 10px;

  transition-duration: 0.5s;
  transition-delay: 0.2s;
  -moz-transition-duration: 0.5s;
  -moz-transition-delay: 0.2s;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-delay: 0.2s;
}

a {
  color: rgba(200, 220, 250, 1);
  text-decoration: none;

  transition-duration: 0.3s;
  -moz-transition-duration: 0.3s;
  -webkit-transition-duration: 0.3s;
}

a:hover {
  color: rgba(240, 240, 240, 1);
  text-decoration: underline;

  transition-duration: 0.1s;
  -moz-transition-duration: 0.1s;
  -webkit-transition-duration: 0.1s;
}

@media screen and (min-width: 769px) {

  #topname {
    font-size: 96pt;
  }

  .slogan {
    font-size: 18pt;
  }
}

@media screen and (min-width: 800px) {

  #topname {
    font-size: 110pt;
  }

  .slogan {
    font-size: 20pt;
  }

  body {
    font-size: 16pt;
  }

  .container {
    width: 80%;
    min-width: 500px;
    max-width: 800px;
  }

  .copy {
    float: left;
    width: 80%;
  }

  .social {
    float: right;
    width: 16%;
  }
}

@media screen and (min-width: 1200px) {

  #topname {
    font-size: 220pt;
  }

}

